[tool.poetry]
name = "cts_slack_bot"
version = "0.0.1"
description = "Bot for CTS Slack Server"
authors = ["BurningShed <BurningShed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.2.3"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
